--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,7 +296,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right;
+  background: url("../img/Titleist.jpg") center;
   background-size: cover;
   position: relative;
 }
@@ -585,7 +585,7 @@ section {
 }
 
 .about .image {
-  background: url("../img/me.jpg") center center no-repeat;
+  background: url("../img/PataYoda.jpg") center center no-repeat;
   background-size: cover;
   min-height: 500px;
 }
@@ -624,7 +624,7 @@ section {
   width: 1px;
   height: 10px;
   transition: .9s;
-  background-color: #ffb727;
+  background-color: #00008B;
 }
 
 /*--------------------------------------------------------------
@@ -635,7 +635,7 @@ section {
   font-weight: 700;
   margin-top: 20px;
   margin-bottom: 20px;
-  color: #3b434a;
+  color: #0b0136;
 }
 
 .resume .resume-item {
@@ -650,13 +650,13 @@ section {
   font-size: 16px;
   font-weight: 700;
   text-transform: uppercase;
-  color: #ffb727;
+  color: #200fb6;
   margin-bottom: 10px;
 }
 
 .resume .resume-item h5 {
   font-size: 16px;
-  background: #eef0f2;
+  background: #e2d7f3;
   padding: 5px 15px;
   display: inline-block;
   font-weight: 600;
@@ -709,13 +709,13 @@ section {
   border-radius: 50%;
   width: 72px;
   height: 72px;
-  background: #fff4df;
+  background: #d7ccf0;
 }
 
 .services .icon i {
   font-size: 36px;
   line-height: 1;
-  color: #ffb727;
+  color: #4000ff;
 }
 
 .services .title {
@@ -736,11 +736,11 @@ section {
 }
 
 .services .icon-box:hover {
-  border-color: #ffb727;
+  border-color: #4000ff;
 }
 
 .services .icon-box:hover .title a {
-  color: #ffb727;
+  color: #4000ff;
 }
 
 /*--------------------------------------------------------------
@@ -1268,7 +1268,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: url("../img/footer-bg.jpg") top center no-repeat;
+  background: url("../img/RedRocks.JPG")  center no-repeat;
   background-size: cover;
   color: #fff;
   font-size: 14px;
