--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,7 +296,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/Titleist.jpg") center;
+  background: url("../img/Titleist.jpg") top center;
   background-size: cover;
   position: relative;
 }
@@ -585,7 +585,7 @@ section {
 }
 
 .about .image {
-  background: url("../img/PataYoda.jpg") center center no-repeat;
+  background: url("../img/PataYoda.jpg") bottom center no-repeat;
   background-size: cover;
   min-height: 500px;
 }
