--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,8 +296,9 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/edinburgh.jpeg") center center;
-  background-size: cover;
+  background: url("../img/edinburgh.jpeg") no-repeat center center;
+  background-size: contain; /* This will make sure the image isn't stretched */
+  background-attachment: fixed; /* Optional: gives a nice scrolling effect */
   position: relative;
 }
 
@@ -585,10 +586,12 @@ section {
 }
 
 .about .image {
-  background: url("../img/macdonald.jpeg") bottom center no-repeat;
-  background-size: cover;
+  background: url("../img/macdonald.jpeg") no-repeat bottom center;
+  background-size: contain;  /* Ensures the image doesn't stretch */
   min-height: 500px;
+  background-attachment: fixed;  /* Optional: keeps the background fixed during scroll */
 }
+
 
 .about .skills-content {
   margin-top: 30px;
