--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,7 +296,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/edinburgh.jpeg") no-repeat center center;
+  background: url("../img/crail.jpeg") no-repeat center center;
   background-size: cover; /* This will ensure the image fully covers the space without stretching */
   background-attachment: fixed; /* Optional: for a parallax-like effect as you scroll */
   position: relative;
@@ -525,6 +525,7 @@ section {
 .about .content ul li {
   margin-bottom: 20px;
   display: flex;
+  font-size: 14px;
   align-items: center;
 }
 
@@ -533,7 +534,7 @@ section {
 }
 
 .about .content ul i {
-  font-size: 16px;
+  font-size: 20px;
   margin-right: 5px;
   color: #ffb727;
   line-height: 0;
@@ -588,10 +589,14 @@ section {
 
 .about .image {
   background: url("../img/macdonald.jpeg") no-repeat center center;
-  background-size: cover; /* Keeps it as a cover but will crop if necessary */
-  min-height: 500px;
-  object-fit: cover; /* Ensures the image fits properly without distortion */
+  background-size: cover; /* Ensures the image covers the container */
+  background-position: center; /* Ensures the focal point is centered */
+  min-height: 700px;
+  width: 33.33%; /* Ensures the sidebar takes up 1/3 of the container width */
+  height: 100%; /* Ensure the height of the image takes up the full height of the container */
+  object-fit: cover; /* Optional, though this property doesn't apply directly to background images */
 }
+
 
 
 
@@ -646,13 +651,14 @@ section {
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
+  font-size: 14px;
   border-left: 2px solid #82909c;
   position: relative;
 }
 
 .resume .resume-item h4 {
   line-height: 18px;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 700;
   text-transform: uppercase;
   color: #200fb6;
@@ -660,7 +666,7 @@ section {
 }
 
 .resume .resume-item h5 {
-  font-size: 16px;
+  font-size: 14px;
   background: #e2d7f3;
   padding: 5px 15px;
   display: inline-block;
@@ -670,10 +676,12 @@ section {
 
 .resume .resume-item ul {
   padding-left: 20px;
+  font-size: 12px;
 }
 
 .resume .resume-item ul li {
   padding-bottom: 10px;
+  font-size: 12px;
 }
 
 .resume .resume-item:last-child {
